fix: whitespace and font issues in card html objects

--- a/client/css/widgets/card.css
+++ b/client/css/widgets/card.css
@@ -23,3 +23,8 @@
   background-position: center center;
   box-sizing: border-box;
 }
+
+.card > .cardFace > .cardFaceObject.html {
+  white-space-collapse: collapse;
+  font-size: 14px;
+}
